# ai-guard-sdk

./: LICENSE  README.md  pyproject.toml
.github/gh/workflows/: python-test.yml
.github/workflows/: ci.Dockerfile  pypi.yml  python-test.yml
ai_guard/: __init__.py  api.py
ai_guard/client/: __init__.py  chunker.py  client.py  stream.py
ai_guard/redact/: __init__.py  redactor.py
ai_guard/tests/: config.py  ports.py  test_chunker.py  test_classification.py  test_classification_integration.py  test_classification_service.py  test_metric_integration.py  test_redaction.py  test_server.py  test_stream.py  test_stream_integration.py
ai_guard/tests/profiles/: 7dbf380f-0af8-4276-acb0-85413db2dbff.json  phonenumber.json
