[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-guard-sdk"
version = "0.1.0"
description = "Python SDK for OneTrust AI Guard Service"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cryptography>=43.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "trustme>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_guard*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["ai_guard/tests"]
filterwarnings = ["error"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["ai_guard"]
include = ["ai_guard/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
